feat: set the git editor to neovim

--- a/install
+++ b/install
@@ -16,3 +16,5 @@ ln -sf $DOTFILES/nvim $HOME/.config/nvim
 if [ ! -d "$HOME/.oh-my-zsh" ]; then
     KEEP_ZSHRC=yes sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 fi
+
+git config --global core.editor nvim
